--- a/src/components/Pricing.css
+++ b/src/components/Pricing.css
@@ -11,13 +11,17 @@
   max-width: 400px;
 }
 
-#secrets img {
-  height: 600px;
-  width: auto;
-}
-
 .pricing-item {
   max-width: 380px;
   margin: 30px 15px;
   border-radius: 25px;
+}
+
+#secrets {
+  min-width: 100%;
+}
+
+#secrets img {
+  height: 600px;
+  width: auto;
 }
