Add navbar items.

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,14 @@
   width: 55px;
 }
 
+#navbarSupportedContent {
+  flex: 1;
+}
+
+#navbarSupportedContent ul {
+  list-style-type: none;
+}
+
 #actually img, #tired img {
   max-height: 480px;
 }
