--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -43,6 +43,12 @@
   max-height: 480px;
 }
 
+.wave2 {
+  background-image: url('/src/assets/header-bottom-wave.svg');
+  background-repeat: no-repeat;
+  background-size: 100vw auto;
+}
+
 .quotes {
   font-size: 20px;
   margin-bottom: 11px;
