Add Google Fonts.

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 :root {
   overflow-x: hidden;
+  font-family: "Roboto", sans-serif;
+  /* font-family: "Cedarville Cursive", cursive; */
   /* Yellow - #EDC444 */
 }
 
