--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -37,6 +37,22 @@
 #navbarSupportedContent ul li {
   margin: 0px 5px;
   padding: 10px;
+  font-weight: 600;
+}
+
+.logo-heading h4 {
+  font-weight: 800;
+}
+
+.logo-heading h6 {
+  font-family: "Cedarville Cursive", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+#actually h1 {
+  font-size: 50px;
+  font-weight: 900;
 }
 
 #actually img, #tired img {
