--- a/src/components/Pricing.css
+++ b/src/components/Pricing.css
@@ -1,9 +1,14 @@
-#trial, #complete {
+#trial,
+#complete {
   min-width: 100%;
 }
 
+#trial h2 {
+  font-weight: 600;
+}
+
 .wave3 {
-  background-image: url('/src/assets/pricing-top-wave.svg');
+  background-image: url("/src/assets/pricing-top-wave.svg");
   background-repeat: no-repeat;
   background-size: 100vw auto;
 }
@@ -23,8 +28,21 @@
   border-radius: 25px;
 }
 
+.pricing-item h1 {
+  font-weight: 800;
+}
+
+.pricing-item p:nth-of-type(1) {
+  font-size: 35px;
+  font-weight: 400;
+}
+
+.pricing-item p {
+  font-weight: 400;
+}
+
 .wave4 {
-  background-image: url('/src/assets/pricing-bottom-wave.svg');
+  background-image: url("/src/assets/pricing-bottom-wave.svg");
   background-repeat: no-repeat;
   background-size: 100vw auto;
 }
