Change column settings.

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -59,6 +59,10 @@
   max-height: 480px;
 }
 
+#actually img {
+  max-width: 100%;
+}
+
 .wave2 {
   background-image: url('/src/assets/header-bottom-wave.svg');
   background-repeat: no-repeat;
