--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,14 @@ p {
   font-weight: 600;
 }
 
+img {
+  transition: transform .8s ease-in-out;
+  transform: scale(1);
+}
+
+img:hover {
+  z-index: 200;
+  transform: scale(1.3);
+}
+
 
