--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ p {
 }
 
 img {
-  transition: transform .8s ease-in-out;
+  transition: transform 0.8s ease-in-out;
   transform: scale(1);
 }
 
@@ -29,4 +29,13 @@ img:hover {
   transform: scale(1.3);
 }
 
+button {
+  transition: background-color 0.3s ease-in-out, transform 1s ease-in-out,
+    box-shadow 0.3s ease-in-out;
+  transform: scale(1);
+}
 
+button:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+}
