--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ button {
   transition: background-color 0.3s ease-in-out, transform 1s ease-in-out,
     box-shadow 0.3s ease-in-out;
   transform: scale(1);
+  white-space: nowrap;
 }
 
 button:hover {
