--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -63,4 +63,8 @@
   .wave1 {
     background-image: url('/assets/header-top-wave-small.svg');
   }
+
+  .wave2 {
+    background-image: url('/assets/header-bottom-wave-small.svg');
+  }
 }
