--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,3 +6,14 @@
   font-size: 30px;
   color: white;
 }
+
+.social-icons > svg {
+  padding: 5px;
+  margin: 0px 8px;
+  transform: scale(1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.social-icons > svg:hover {
+  transform: scale(1.1);
+}
